--- a/index.html
+++ b/index.html
@@ -11,285 +11,7 @@
   <meta property="og:url" content="https://sk8border.github.io/sk8border/" />
   <meta property="og:image" content="https://sk8border.github.io/sk8border/sk8border_logo.png" />
 
-  <style>
-    @font-face {
-      font-family: 'PICO-8';
-      src: url('PICO-8 wide.ttf');
-    }
-    @font-face {
-      font-family: Softsquare;
-      src: url('ChevyRay - Softsquare FR.ttf');
-    }
-    body,
-    html {
-      margin: 0;
-      width: 100%;
-      font-size: 20px;
-    }
-    body {
-      background-color: #5e564e; /* pico-8 dark-gray */
-      font-family: Softsquare;
-      color: white;
-      box-sizing: border-box;
-    }
-    h1 {
-      font-family: Softsquare;
-      line-height: 2rem;
-    }
-    h1, h2, p, ul, #play_game, #play_game_30fps {
-      margin-left: 1rem;
-      margin-right: 1rem;
-    }
-    h1, h2, p, ul {
-      max-width: 512px;
-    }
-    ul {
-      text-align: left;
-    }
-    ul li {
-      margin-bottom: 1rem;
-    }
-    a {
-      font-size: 1.1em;
-      color: #29adff; /* pico-8 blue */
-    }
-    #lang a {
-      font-size: inherit;
-    }
-    a:active {
-      color: #ffa300 !important; /* pico-8 orange */
-    }
-    a:visited {
-      color: #83769c; /* pico-8 indigo */
-    }
-    .main {
-      margin-left: auto;
-      margin-right: auto;
-      margin-bottom: 3rem;
-    }
-    .playing.using_touch .main {
-      display: none;
-    }
-    .pico-8 {
-      font-family: 'PICO-8';
-      font-size: 0.6em;
-    }
-    .logo {
-      width: 100%;
-      margin-bottom: 3em;
-    }
-    .logo img {
-      width: 100%;
-    }
-    canvas {
-      width: 256px;
-      height: 256px;
-      image-rendering: optimizeSpeed;
-      image-rendering: -moz-crisp-edges;
-      image-rendering: -webkit-optimize-contrast;
-      image-rendering: optimize-contrast;
-      image-rendering: pixelated;
-      -ms-interpolation-mode: nearest-neighbor;
-    }
-    @media screen and (min-width: 382px) and (min-height: 382px) {
-      canvas {
-        width: 384px;
-        height: 384px;
-      }
-    }
-    @media screen and (min-width: 514px) and (min-height: 514px) {
-      canvas {
-        width: 512px;
-        height: 512px;
-      }
-    }
-    .desk_controls {
-      width: 512px;
-    }
-    .pico8_el {
-      float: left;
-      width: 92px;
-      display: inline-block;
-      margin: 1px;
-      padding: 4px;
-      text-align: center;
-      color: #fff;
-      background-color: #777;
-      font-family: verdana;
-      font-size: 9pt;
-      cursor: pointer;
-      cursor: hand;
-    }
-    .pico8_el a {
-      text-decoration: none;
-      color: #fff;
-    }
-    .pico8_el:hover {
-      background-color: #aaa;
-    }
-    .pico8_el:link {
-      background-color: #aaa;
-    }
-    #play_game,
-    #play_game_30fps {
-      color: white;
-      font-family: Softsquare;
-      background-color: #ff004d; /* pico-8 red */
-      border-style: solid;
-      border-color: white;
-      cursor: pointer;
-    }
-    #play_game {
-      font-size: 2rem;
-      padding: 0.5rem 1rem;
-      border-radius: 15px;
-      border-width: 3px;
-      line-height: 3rem;
-      margin-top: 1rem;
-      margin-bottom: 1rem;
-    }
-    #play_game_30fps {
-      font-size: 1.2rem;
-      padding: 0.3rem 0.6rem;
-      border-radius: 9px;
-      border-width: 2px;
-      line-height: 1.8rem;
-      margin-top: 0.6rem;
-      margin-bottom: 0.6rem;
-    }
-    *.hidden {
-      display: none;
-    }
-    .touch_game, .desk_game {
-      display: none;
-    }
-    .playing.using_touch .touch_game,
-    .playing:not(.using_touch) .desk_game {
-      display: initial;
-    }
-    .touch_game {
-      background-color: rgba(0, 0, 0, 0.9);
-      position: fixed;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      -webkit-user-select: none;
-         -moz-user-select: none;
-          -ms-user-select: none;
-              user-select: none;
-      -webkit-touch-callout: none;
-    }
-    .touch_game canvas,
-    .touch_game .status {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      -webkit-transform: translate(-50%, -50%);
-              transform: translate(-50%, -50%);
-    }
-    @media screen and (max-width: 800px) and (min-height: 460px) {
-      .touch_game canvas,
-      .touch_game .status {
-        -webkit-transform: translate(-50%, -70%);
-                transform: translate(-50%, -70%);
-      }
-    }
-    .desk_game canvas {
-      border: 1px solid white;
-      margin: 1rem;
-    }
-    .meta_controls {
-      position: absolute;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 1000;
-      margin: 0.5rem 1rem;
-      display: -webkit-box;
-      display: flex;
-      -webkit-box-pack: justify;
-              justify-content: space-between;
-      -webkit-box-align: center;
-              align-items: center;
-    }
-    .meta_btn {
-      padding: 0 1rem 3rem;
-    }
-    .meta_btn.exit {
-      color: white;
-      font-size: 1.8rem;
-      font-family: verdana;
-    }
-    .control_btn {
-      position: fixed;
-      padding-bottom: 2.5rem;
-      padding-top: 5rem;
-    }
-    .control_btn.a {
-      bottom: 0;
-      left: 0;
-      padding-left: 2.5rem;
-      padding-right: 3rem;
-    }
-    .control_btn.b {
-      bottom: 0;
-      right: 0;
-      padding-left: 3rem;
-      padding-right: 2.5rem;
-    }
-    .control_btn button {
-      font-family: 'PICO-8';
-      border: 2px solid white;
-      border-radius: 50%;
-      width: 2.6rem;
-      padding: 1.3rem 0;
-      color: white;
-      font-size: 0.8rem;
-      line-height: 0;
-    }
-    .control_btn.a button {
-      background-color: #ff004d; /* pico-8 red */
-    }
-    .control_btn.b button {
-      background-color: #83769c; /* pico-8 indigo */
-    }
-    .control_btn button::before {
-      font-family: verdana;
-      font-size: 14px;
-      content: '\00a0'; /* space */
-    }
-    .control_btn button:focus {
-      outline: 0;
-    }
-    .playing #separator {
-      margin-top: 3.6rem;
-    }
-    .gif_wrapper {
-      position: relative;
-      display: inline-block;
-      display: inline-grid;
-    }
-    .gif_wrapper > .notice::after {
-      content: "This isn't the game (please scroll down!)";
-      color: white;
-      background: rgba(0, 0, 0, 0.4);
-      font-style: italic;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      opacity: 0;
-      transition: opacity 0.08s;
-    }
-    .gif_wrapper:hover > .notice::after {
-      opacity: 1;
-    }
-  </style>
+  <style>@font-face{font-family:PICO-8;src:url(PICO-8\ wide.ttf)}@font-face{font-family:Softsquare;src:url("ChevyRay - Softsquare FR.ttf")}body,html{margin:0;width:100%;font-size:20px}body{background-color:#5e564e;color:#fff;box-sizing:border-box}body,h1{font-family:Softsquare}h1{line-height:2rem}#play_game,#play_game_30fps,h1,h2,p,ul{margin-left:1rem;margin-right:1rem}h1,h2,p,ul{max-width:512px}ul{text-align:left}ul li{margin-bottom:1rem}a{font-size:1.1em;color:#29adff}#lang a{font-size:inherit}a:active{color:#ffa300!important}a:visited{color:#83769c}.main{margin-left:auto;margin-right:auto;margin-bottom:3rem}.playing.using_touch .main{display:none}.pico-8{font-family:PICO-8;font-size:.6em}.logo{margin-bottom:3em}.logo,.logo img{width:100%}canvas{width:256px;height:256px;image-rendering:optimizeSpeed;image-rendering:-moz-crisp-edges;image-rendering:-webkit-optimize-contrast;image-rendering:optimize-contrast;image-rendering:pixelated;-ms-interpolation-mode:nearest-neighbor}@media screen and (min-width:382px) and (min-height:382px){canvas{width:384px;height:384px}}@media screen and (min-width:514px) and (min-height:514px){canvas{width:512px;height:512px}}.desk_controls{width:512px}.pico8_el{float:left;width:92px;display:inline-block;margin:1px;padding:4px;text-align:center;color:#fff;background-color:#777;font-family:verdana;font-size:9pt;cursor:pointer;cursor:hand}.pico8_el a{text-decoration:none;color:#fff}.pico8_el:hover,.pico8_el:link{background-color:#aaa}#play_game,#play_game_30fps{color:#fff;font-family:Softsquare;background-color:#ff004d;border-style:solid;border-color:#fff;cursor:pointer}#play_game{font-size:2rem;padding:.5rem 1rem;border-radius:15px;border-width:3px;line-height:3rem;margin-top:1rem;margin-bottom:1rem}#play_game_30fps{font-size:1.2rem;padding:.3rem .6rem;border-radius:9px;border-width:2px;line-height:1.8rem;margin-top:.6rem;margin-bottom:.6rem}.desk_game,.hidden,.touch_game{display:none}.playing.using_touch .touch_game,.playing:not(.using_touch) .desk_game{display:initial}.touch_game{background-color:rgba(0,0,0,.9);position:fixed;top:0;bottom:0;left:0;right:0;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;-webkit-touch-callout:none}.touch_game .status,.touch_game canvas{position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%)}@media screen and (max-width:800px) and (min-height:460px){.touch_game .status,.touch_game canvas{-webkit-transform:translate(-50%,-70%);-ms-transform:translate(-50%,-70%);transform:translate(-50%,-70%)}}.desk_game canvas{border:1px solid #fff;margin:1rem}.meta_controls{position:absolute;top:0;left:0;right:0;z-index:1000;margin:.5rem 1rem;display:-webkit-box;display:-webkit-flex;display:flex;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-box-align:center;-webkit-align-items:center;align-items:center}.meta_btn{padding:0 1rem 3rem}.meta_btn.exit{color:#fff;font-size:1.8rem;font-family:verdana}.control_btn{position:fixed;padding-bottom:2.5rem;padding-top:5rem;display:-webkit-box;display:-webkit-flex;display:flex;-webkit-box-align:end;-webkit-align-items:flex-end;align-items:flex-end;top:6rem}.control_btn.a{bottom:0;left:0;right:50%;padding-left:2.5rem;padding-right:3rem;-webkit-box-pack:start;-webkit-justify-content:flex-start;justify-content:flex-start}.control_btn.b{bottom:0;right:0;left:50%;padding-left:3rem;padding-right:2.5rem;-webkit-box-pack:end;-webkit-justify-content:flex-end;justify-content:flex-end}.control_btn button{font-family:PICO-8;border:2px solid #fff;border-radius:50%;width:2.6rem;height:2.6rem;padding:1.3rem 0;color:#fff;font-size:.8rem;line-height:0}.control_btn.a button{background-color:#ff004d}.control_btn.b button{background-color:#83769c}.control_btn button:before{font-family:verdana;font-size:14px;content:"\00a0"}.control_btn button:focus{outline:0}.playing #separator{margin-top:3.6rem}.gif_wrapper{position:relative;display:inline-block;display:inline-grid}.gif_wrapper>.notice:after{content:"{{{non_interactive_gif}}}";color:#fff;background:rgba(0,0,0,.4);font-style:italic;display:-webkit-box;display:-webkit-flex;display:flex;-webkit-box-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;align-items:center;position:absolute;top:0;bottom:0;left:0;right:0;opacity:0;-webkit-transition:opacity .08s;transition:opacity .08s}.gif_wrapper:hover>.notice:after{opacity:1}</style>
 </head>
 
 <body>
